Mac build now working under openJDK 11